# GlobalOpt

./: .clang-format  .gitmodules  CMakeLists.txt  gui.cpp  gui.hpp  main_opengl.cpp  optimizer.cpp  optimizer.h  stack_allocator.h
contrib/: imgui_plot.cpp  imgui_plot.hpp
contrib/glad/include/glad/: glad.h
contrib/glad/src/: glad.c
